--- a/src/application/Main.fxml
+++ b/src/application/Main.fxml
@@ -1,20 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
 <?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.layout.AnchorPane?>
 
-<BorderPane onKeyTyped="#keyDown" prefHeight="200.0" prefWidth="200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MainController">
+<BorderPane onKeyTyped="#keyDown" prefHeight="413.0" prefWidth="597.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MainController">
    <bottom>
-      <ToolBar>
+      <ToolBar prefHeight="15.0" prefWidth="185.0">
          <items>
-            <Button mnemonicParsing="true" onAction="#next" text="_p kolejny" BorderPane.alignment="CENTER" />
-            <Button onAction="#exit" text="_w wyjdź" />
+            <Button mnemonicParsing="true" onAction="#next" text="P &quot;Kolejna runda&quot;" BorderPane.alignment="CENTER" />
+            <Button onAction="#exit" text="W &quot; Koniec Gry" />
          </items>
       </ToolBar>
    </bottom>
    <center>
-      <TextArea fx:id="result" editable="false" prefHeight="200.0" prefWidth="200.0" text="Aplikacja została uruchomiona. Od teraz będzie działała w tle. Aby dokonać osądu czy na ekranie telewizora(podpiętego do komputera) jest kot, proszę nacisnąć przycisk p. Aby wyłączyć aplikację, proszę nacisnąć przycisk w.&#10;Próba uruchomienia aplikacji, gdy na ekranie nie znajduje się zdjęcie powodujące konflikt, może spowodować nieprawidłowe wyniki." wrapText="true" BorderPane.alignment="CENTER" />
+      <TextArea fx:id="result" editable="false" prefHeight="147.0" prefWidth="421.0" text="Aplikacja została uruchomiona. Od teraz będzie działała w tle. Aby dokonać osądu czy na ekranie telewizora(podpiętego do komputera) jest kot, proszę nacisnąć przycisk p. Aby wyłączyć aplikację, proszę nacisnąć przycisk w.&#10;Próba uruchomienia aplikacji, gdy na ekranie nie znajduje się zdjęcie powodujące konflikt, może spowodować nieprawidłowe wyniki." wrapText="true" BorderPane.alignment="CENTER" />
    </center>
+   <top>
+      <ImageView fitHeight="252.0" fitWidth="596.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
+         <image>
+            <Image url="file:///C:/Users/barry/Downloads/SCRUM-master/src/application/Tecza%20(1).jpg" />
+         </image>
+      </ImageView>
+   </top>
 </BorderPane>
