--- a/src/application/Main.fxml
+++ b/src/application/Main.fxml
@@ -20,7 +20,7 @@
    <top>
       <ImageView fitHeight="260.0" fitWidth="596.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
          <image>
-            <Image url="file:///C:/Users/barry/Downloads/SCRUM-master/Zdjecia/Tecza%20(1).jpg" />
+            <Image url="file://Scrum/res/Rainbow.jpg" />
          </image>
       </ImageView>
    </top>
